04-app-host1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host1
  labels:
    app: host1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: host1
  template:
    metadata:
      labels:
        app: host1
    spec:
      containers:
      - name: host1
        image: victorargento/hostname:host1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

---

kind: Service
apiVersion: v1
metadata:
  name: host1-svc
spec:
  selector:
    app: host1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
