04-app-host2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host2
  labels:
    app: host2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: host2
  template:
    metadata:
      labels:
        app: host2
    spec:
      containers:
      - name: host2
        image: victorargento/hostname:host2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

---

kind: Service
apiVersion: v1
metadata:
  name: host2-svc
spec:
  selector:
    app: host2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
