04-app-hpa-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-php
  labels:
    app: hpa-php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hpa-php
  template:
    metadata:
      labels:
        app: hpa-php
    spec:
      containers:
      - name: php-apache
        image: k8s.gcr.io/hpa-example
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "300m"

---

kind: Service
apiVersion: v1
metadata:
  name: hpa-php-svc
spec:
  selector:
    app: hpa-php
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
