05-load-balancer-traefik.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: 443
    - name: web-admin
      protocol: TCP
      port: 8080
      targetPort: 8080
