05-srv-load-balancer.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: tcp-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: web-admin
      protocol: TCP
      port: 8080
      targetPort: 8080
